--- a/bin/ui/account-list.fxml
+++ b/bin/ui/account-list.fxml
@@ -4,13 +4,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="accountListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <BorderPane prefHeight="79.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <right>
@@ -20,9 +18,6 @@
                </font>
             </Button>
          </right>
-         <center>
-            <ImageView fitHeight="76.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
-         </center>
          <bottom>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="243.0" text="User Account List" textAlignment="CENTER" BorderPane.alignment="CENTER">
                <font>
@@ -33,7 +28,7 @@
       </BorderPane>
    </top>
    <center>
-      <TableView prefHeight="279.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="tvUserList" prefHeight="279.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="tcUsername" prefWidth="146.0" text="Username" />
           <TableColumn fx:id="tcGender" prefWidth="115.0" text="Gender" />
