--- a/bin/ui/register.fxml
+++ b/bin/ui/register.fxml
@@ -8,15 +8,17 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="557.0" prefWidth="489.0" style="-fx-background-color: #E0FFE7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="460.0" style="-fx-background-color: #E0FFE7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <GridPane prefWidth="489.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -34,7 +36,7 @@
             </Label>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="491.0" style="-fx-background-color: #ACE6F7;" text="Create your account " textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" GridPane.rowIndex="1">
                <font>
-                  <Font size="24.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
          </children>
@@ -68,22 +70,18 @@
       </BorderPane>
    </bottom>
    <center>
-      <GridPane prefHeight="334.0" prefWidth="388.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="422.0" prefWidth="357.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="148.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="95.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.0" minWidth="10.0" prefWidth="62.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="105.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="272.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -112,28 +110,67 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label text="Birthday:" GridPane.rowIndex="7">
+            <Label text="Birthday:" GridPane.rowIndex="5">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label prefHeight="17.0" prefWidth="101.0" text="Favorite Browser:" GridPane.rowIndex="8">
+            <Label prefHeight="17.0" prefWidth="101.0" text="Favorite Browser:" GridPane.rowIndex="6">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </Label>
             <PasswordField fx:id="txtNewPassword" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNewUsername" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="113.0" GridPane.columnIndex="1" />
-            <Button mnemonicParsing="false" onAction="#browseFiles" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" text="Male" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" text="Female" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" text="Other" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <CheckBox mnemonicParsing="false" prefHeight="17.0" prefWidth="175.0" text="Software Engineering" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <CheckBox mnemonicParsing="false" text="Telematic Engeenering" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <CheckBox mnemonicParsing="false" text="Industrial Engeenering" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <ChoiceBox maxWidth="1.7976931348623157E308" onDragDetected="#ChoiceBox" prefHeight="25.0" prefWidth="145.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <DatePicker fx:id="txBirthday" onAction="#DatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <TextField prefHeight="25.0" prefWidth="148.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtNewUsername" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="281.0" GridPane.columnIndex="1" />
+            <ChoiceBox maxWidth="1.7976931348623157E308" onDragDetected="#ChoiceBox" prefHeight="25.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <DatePicker fx:id="txBirthday" onAction="#DatePicker" prefHeight="25.0" prefWidth="292.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <GridPane prefHeight="48.0" prefWidth="316.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <RadioButton mnemonicParsing="false" text="Female">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="Gender" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton mnemonicParsing="false" text="Male" toggleGroup="$Gender" GridPane.columnIndex="1" />
+                        <RadioButton mnemonicParsing="false" text="Other" toggleGroup="$Gender" GridPane.columnIndex="2" />
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <GridPane prefHeight="48.0" prefWidth="302.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.0" minWidth="10.0" prefWidth="227.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.0" minWidth="10.0" prefWidth="73.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <TextField fx:id="tfProfilePhoto" editable="false" prefHeight="25.0" prefWidth="183.0" />
+                        <Button mnemonicParsing="false" onAction="#browseFiles" text="Browser" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+            <VBox prefHeight="55.0" prefWidth="272.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <CheckBox mnemonicParsing="false" text="Software Engineering" />
+                  <CheckBox mnemonicParsing="false" text="Telematic Engineering" />
+                  <CheckBox mnemonicParsing="false" text="Industrial Engineering" />
+               </children>
+            </VBox>
          </children>
       </GridPane>
    </center>
