--- a/bin/ui/account-list.fxml
+++ b/bin/ui/account-list.fxml
@@ -4,20 +4,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="accountListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <BorderPane prefHeight="79.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <right>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="35.0" prefWidth="129.0" style="-fx-background-color: #AFD6F9;" text="Log out" BorderPane.alignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-         </right>
+      <BorderPane prefWidth="700.0" BorderPane.alignment="CENTER">
          <bottom>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="243.0" text="User Account List" textAlignment="CENTER" BorderPane.alignment="CENTER">
                <font>
@@ -25,16 +20,33 @@
                </font>
             </Label>
          </bottom>
+         <left>
+            <AnchorPane prefHeight="82.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <children>
+                  <ImageView fx:id="picture" fitHeight="75.0" fitWidth="97.0" layoutX="349.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="lbActualUser" layoutX="230.0" layoutY="28.0" prefHeight="27.0" prefWidth="132.0" textFill="#f20707">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="467.0" layoutY="24.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#logOut" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #AFD6F9;" text="Log out">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </left>
       </BorderPane>
    </top>
    <center>
       <TableView fx:id="tvUserList" prefHeight="279.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="tcUsername" prefWidth="146.0" text="Username" />
-          <TableColumn fx:id="tcGender" prefWidth="115.0" text="Gender" />
-            <TableColumn fx:id="tcCareer" prefWidth="112.0" text="Career" />
-            <TableColumn fx:id="tcBirthday" prefWidth="110.0" text="Birthday" />
-            <TableColumn fx:id="tcBrowser" prefWidth="116.0" text="Browser" />
+          <TableColumn fx:id="tcGender" prefWidth="91.0" text="Gender" />
+            <TableColumn fx:id="tcCareer" prefWidth="150.0" text="Career" />
+            <TableColumn fx:id="tcBirthday" prefWidth="107.0" text="Birthday" />
+            <TableColumn fx:id="tcBrowser" prefWidth="105.0" text="Browser" />
         </columns>
       </TableView>
    </center>
