--- a/src/ui/register.fxml
+++ b/src/ui/register.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="460.0" style="-fx-background-color: #E0FFE7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #E0FFE7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <GridPane prefWidth="489.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -59,7 +59,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="31.0" prefWidth="244.0" style="-fx-background-color: #AFD6F9;" text="Create Account" GridPane.columnIndex="1">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createAccount" prefHeight="31.0" prefWidth="244.0" style="-fx-background-color: #AFD6F9;" text="Create Account" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -136,13 +136,13 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <RadioButton mnemonicParsing="false" text="Female">
+                        <RadioButton fx:id="femaleOption" mnemonicParsing="false" text="Female">
                            <toggleGroup>
                               <ToggleGroup fx:id="Gender" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton mnemonicParsing="false" text="Male" toggleGroup="$Gender" GridPane.columnIndex="1" />
-                        <RadioButton mnemonicParsing="false" text="Other" toggleGroup="$Gender" GridPane.columnIndex="2" />
+                        <RadioButton fx:id="maleOption" mnemonicParsing="false" text="Male" toggleGroup="$Gender" GridPane.columnIndex="1" />
+                        <RadioButton fx:id="otherOption" mnemonicParsing="false" text="Other" toggleGroup="$Gender" GridPane.columnIndex="2" />
                      </children>
                   </GridPane>
                </children>
